# TPMSproject

./: .gitignore  CMakeLists.txt  Definition.h  DesignTPMS.cpp  README.md  TPMSGenerator.cpp  TPMSsheetGenerator.cpp  TPMSsolidGenerator.cpp  Tpms.cpp  Tpms.h  Utils.cpp  Utils.h  mainTPMS.cpp
